@@ -3,6 +3,7 @@
  ** yhsm-init-oath-token: Handle keys with length != 20.
  ** yhsm-yubikey-ksm: Allow passing soft-HSM keys via stdin by passing "-" as
     device argument.
+ ** yhsm-yubikey-ksm: Allow passing --db-url via environment variable.
  ** Moved utils, yubikey-ksm and validation-server to be included when
     installing using pip.
  ** Use entry_point scripts generated by setuptools.
